--- a/UE4AssistantCLI/UE4AssistantCLI.csproj
+++ b/UE4AssistantCLI/UE4AssistantCLI.csproj
@@ -14,7 +14,9 @@
   <ItemGroup>
     <ProjectReference Include="..\ClipboardEx\ClipboardEx.Win32\ClipboardEx.Win32.csproj" />
     <ProjectReference Include="..\SystemEx\SystemEx.csproj" />
-    <ProjectReference Include="..\UE4Assistant.Templates\UE4Assistant.Templates.csproj" />
+    <ProjectReference Include="..\UE4Assistant.Templates\UE4Assistant.Templates.csproj">
+      <Private>false</Private>
+    </ProjectReference>
     <ProjectReference Include="..\UE4Assistant\UE4Assistant.csproj" />
   </ItemGroup>
 
