--- a/UE4AssistantCLI/UE4AssistantCLI.csproj
+++ b/UE4AssistantCLI/UE4AssistantCLI.csproj
@@ -2,13 +2,31 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>1.2.0</Version>
-    <AssemblyName>ua-cli</AssemblyName>
+    <TargetFrameworks>netcoreapp3.1;net50;net60</TargetFrameworks>
+    <Version>1.3.1</Version>
+    <AssemblyName>ue4cli</AssemblyName>
+
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>ue4cli</ToolCommandName>
+
+    <PackageId>ue4cli</PackageId>
+    <PackageVersion>$(Version)</PackageVersion>
+    <PackageOutputPath>./nupkg</PackageOutputPath>
+
+    <Authors>Igor Karatayev</Authors>
+    <Description>Command line tools for Unreal Engine</Description>
+    <Copyright>Igor Karatayev</Copyright>
+    <PackageTags>unreal engine</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ConsoleAppFramework" Version="3.3.1" />
+    <Compile Remove="publish\**" />
+    <EmbeddedResource Remove="publish\**" />
+    <None Remove="publish\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="ConsoleAppFramework" Version="4.0.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
@@ -17,6 +35,7 @@
     <ProjectReference Include="..\SystemEx\SystemEx.csproj" />
     <ProjectReference Include="..\UE4Assistant.Templates\UE4Assistant.Templates.csproj">
       <Private>true</Private>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </ProjectReference>
     <ProjectReference Include="..\UE4Assistant\UE4Assistant.csproj" />
   </ItemGroup>
