fixed bug with reading UE path from config. Added uuid list command.

--- a/UE4AssistantCLI/Properties/launchSettings.json
+++ b/UE4AssistantCLI/Properties/launchSettings.json
@@ -8,7 +8,11 @@
     "ue4cli build": {
       "commandName": "Project",
       "commandLineArgs": "build",
-      "workingDirectory": "D:\\project\\DeOrbeNovo"
+      "workingDirectory": "D:\\project\\MathExpressionTest\\Source\\MathExpressionTest"
+    },
+    "ue4cli uuid list": {
+      "commandName": "Project",
+      "commandLineArgs": "uuid list"
     }
   }
 }
