--- a/UE4AssistantCLI/Properties/launchSettings.json
+++ b/UE4AssistantCLI/Properties/launchSettings.json
@@ -16,7 +16,12 @@
     },
     "ue4cli uuid set": {
       "commandName": "Project",
-      "commandLineArgs": "uuid set {82C7EB94-431D-A701-7959-3F845C07FADB}",
+      "commandLineArgs": "uuid set {82C7EB94-431D-A701-7959-3F845C07FADC}",
+      "workingDirectory": "D:\\project\\MathExpressionTest\\Source\\MathExpressionTest"
+    },
+    "ue4cli help": {
+      "commandName": "Project",
+      "commandLineArgs": "help",
       "workingDirectory": "D:\\project\\MathExpressionTest\\Source\\MathExpressionTest"
     }
   }
