Added plugins to uproject. added indentation settings.

--- a/UE4AssistantCLI/Properties/launchSettings.json
+++ b/UE4AssistantCLI/Properties/launchSettings.json
@@ -23,6 +23,11 @@
       "commandName": "Project",
       "commandLineArgs": "help",
       "workingDirectory": "D:\\project\\MathExpressionTest\\Source\\MathExpressionTest"
+    },
+    "ue4cli create_config": {
+      "commandName": "Project",
+      "commandLineArgs": "create_config",
+      "workingDirectory": "D:\\project\\MathExpressionTest\\"
     }
   }
 }
