--- a/UE4AssistantCLI/Properties/launchSettings.json
+++ b/UE4AssistantCLI/Properties/launchSettings.json
@@ -1,10 +1,5 @@
 {
   "profiles": {
-    "UE4AssistantCLI": {
-      "commandName": "Project",
-      "commandLineArgs": "uuid show",
-      "workingDirectory": "F:\\UnrealEngine.master"
-    },
     "ue4cli build": {
       "commandName": "Project",
       "commandLineArgs": "build",
@@ -19,15 +14,24 @@
       "commandLineArgs": "uuid set {82C7EB94-431D-A701-7959-3F845C07FADC}",
       "workingDirectory": "D:\\project\\MathExpressionTest\\Source\\MathExpressionTest"
     },
-    "ue4cli help": {
-      "commandName": "Project",
-      "commandLineArgs": "help",
-      "workingDirectory": "D:\\project\\MathExpressionTest\\Source\\MathExpressionTest"
-    },
     "ue4cli create_config": {
       "commandName": "Project",
       "commandLineArgs": "create_config",
       "workingDirectory": "D:\\project\\MathExpressionTest\\"
+    },
+    "ue4cli": {
+      "commandName": "Project",
+      "workingDirectory": "F:\\UnrealEngine.master"
+    },
+    "ue4cli uuid set help": {
+      "commandName": "Project",
+      "commandLineArgs": "uuid set help",
+      "workingDirectory": "D:\\project\\MathExpressionTest\\Source\\MathExpressionTest"
+    },
+    "ue4cli add bpfl": {
+      "commandName": "Project",
+      "commandLineArgs": "add bpfl",
+      "workingDirectory": "D:\\project\\MathExpressionTest\\Source\\MathExpressionTest"
     }
   }
 }
