Fixed generate project on add item.

--- a/UE4AssistantCLI/Properties/launchSettings.json
+++ b/UE4AssistantCLI/Properties/launchSettings.json
@@ -32,6 +32,11 @@
       "commandName": "Project",
       "commandLineArgs": "uuid show",
       "workingDirectory": "D:\\project\\MathExpressionTest\\Source\\MathExpressionTest"
+    },
+    "ue4cli add class": {
+      "commandName": "Project",
+      "commandLineArgs": "add class SettlerSoulsPlayerState APlayerState",
+      "workingDirectory": "D:\\project\\SettlerSouls\\Source\\SettlerSouls"
     }
   }
 }
