Added settings for patch builds.

--- a/UE4AssistantCLI/Properties/launchSettings.json
+++ b/UE4AssistantCLI/Properties/launchSettings.json
@@ -1,10 +1,5 @@
 {
   "profiles": {
-    "ue4cli build": {
-      "commandName": "Project",
-      "commandLineArgs": "build",
-      "workingDirectory": "D:\\project\\SettlerSouls"
-    },
     "ue4cli uuid list": {
       "commandName": "Project",
       "commandLineArgs": "uuid list"
@@ -47,6 +42,11 @@
       "commandName": "Project",
       "commandLineArgs": "cook Cook.json --dump > Cook.json ",
       "workingDirectory": "D:\\Pixelynx\\Globant-Dev_Binary\\PixelynxClient"
+    },
+    "ue4cli log": {
+      "commandName": "Project",
+      "commandLineArgs": "log",
+      "workingDirectory": "D:\\Pixelynx\\Globant-Dev\\PixelynxClient"
     }
   }
 }
