Set default Platform to current platform when Platform in settings is null.

--- a/UE4AssistantCLI/Properties/launchSettings.json
+++ b/UE4AssistantCLI/Properties/launchSettings.json
@@ -34,11 +34,6 @@
       "commandLineArgs": "diff C:\\Windows\\a.a D:\\project\\SettlerSouls\\Source\\SettlerSouls\\S.cpp",
       "workingDirectory": "D:\\"
     },
-    "ue4cli cook Cook.json --dump > Cook.json ": {
-      "commandName": "Project",
-      "commandLineArgs": "cook Cook.json --dump > Cook.json ",
-      "workingDirectory": "D:\\Pixelynx\\Globant-Dev_Binary\\PixelynxClient"
-    },
     "ue4cli log build": {
       "commandName": "Project",
       "commandLineArgs": "log build",
@@ -47,6 +42,11 @@
     "ue4cli build": {
       "commandName": "Project",
       "commandLineArgs": "build",
+      "workingDirectory": "D:\\Pixelynx\\Globant-Dev\\PixelynxClient"
+    },
+    "ue4cli cook CookServer.json ": {
+      "commandName": "Project",
+      "commandLineArgs": "cook CookServer.json",
       "workingDirectory": "D:\\Pixelynx\\Globant-Dev\\PixelynxClient"
     }
   }
