--- a/UE4AssistantCLI/Properties/launchSettings.json
+++ b/UE4AssistantCLI/Properties/launchSettings.json
@@ -2,8 +2,8 @@
   "profiles": {
     "ue4cli uuid set": {
       "commandName": "Project",
-      "commandLineArgs": "uuid set {82C7EB94-431D-A701-7959-3F845C07FADC}",
-      "workingDirectory": "D:\\project\\MathExpressionTest\\Source\\MathExpressionTest"
+      "commandLineArgs": "uuid set {9548DD97-3A7C-4777-821F-235EB7401124}",
+      "workingDirectory": "E:\\project\\DeOrbeNovo"
     },
     "ue4cli create_config": {
       "commandName": "Project",
@@ -42,7 +42,7 @@
     "ue4cli build": {
       "commandName": "Project",
       "commandLineArgs": "build",
-      "workingDirectory": "D:\\Pixelynx\\Globant-Dev\\PixelynxClient"
+      "workingDirectory": "E:\\project\\DeOrbeNovo"
     },
     "ue4cli cook CookServer.json ": {
       "commandName": "Project",
