--- a/UE4AssistantCLI/Properties/launchSettings.json
+++ b/UE4AssistantCLI/Properties/launchSettings.json
@@ -32,7 +32,7 @@
     "ue4cli build": {
       "commandName": "Project",
       "commandLineArgs": "build",
-      "workingDirectory": "E:\\project\\DeOrbeNovo"
+      "workingDirectory": "D:\\Pixelynx\\Globant-Dev\\PixelynxClient"
     },
     "ue4cli cook CookServer.json ": {
       "commandName": "Project",
