--- a/UE4AssistantCLI/UE4AssistantCLI.csproj
+++ b/UE4AssistantCLI/UE4AssistantCLI.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFrameworks>net50;net60</TargetFrameworks>
-    <Version>1.4.32</Version>
+    <Version>1.5.0</Version>
     <AssemblyName>ue4cli</AssemblyName>
 
     <LangVersion>latest</LangVersion>
@@ -32,6 +32,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="IndexRange" Version="1.0.2" />
+    <PackageReference Include="IsExternalInit" Version="1.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
