--- a/UE4AssistantCLI/Properties/launchSettings.json
+++ b/UE4AssistantCLI/Properties/launchSettings.json
@@ -27,7 +27,7 @@
     "ue4cli build": {
       "commandName": "Project",
       "commandLineArgs": "build",
-      "workingDirectory": "D:\\Pixelynx\\Globant-Dev\\PixelynxClient"
+      "workingDirectory": "F:\\UnrealEngine.release"
     },
     "ue4cli cook CookServer.json ": {
       "commandName": "Project",
